# AlphaPulse

./: .coverage  .dockerignore  .env.example  .gitignore  .rooconfig.md  .roomodes  AGENTS.md  AGENT_INSTRUCTIONS.yaml  AI_HEDGE_FUND_DOCUMENTATION.md  AI_HEDGE_FUND_IMPLEMENTATION_PLAN.md  API_DOCUMENTATION.md  AlphaPulse_Presentation_Structure.json  AlphaPulse_Presentation_Structure.md  BYBIT_DEBUG_README.md  CHANGELOG.md  CLAUDE.md  COMPONENT_MAP.yaml  COMPREHENSIVE_INTEGRATION_AUDIT_SUMMARY.md  DATABASE_CONNECTION_FIX.md  DATABASE_SETUP.md  DEBUG_TOOLS.md  DEPLOYMENT.md  DYNAMIC_RISK_BUDGETING_WIRING_ANALYSIS.md  Dockerfile  ENSEMBLE_METHODS_INTEGRATION_ANALYSIS.md  EXPLAINABLE_AI_INTEGRATION_ANALYSIS.md  FASTAPI_IMPLEMENTATION_PLAN.md  FEATURE_INTEGRATION_MAP.md  GPU_ACCELERATION_UTILIZATION_ANALYSIS.md  HEDGE_FUND_REQUIREMENTS.md  INTEGRATION_FLOWS.yaml  LICENSE  MIGRATION.md  PROJECT_MEMORY.yaml  README.md  README_DEMO.md  REAL_DATA_IMPLEMENTATION_PLAN.md  REGIME_INTEGRATION_ANALYSIS.md  REGIME_INTEGRATION_TASKS.md  RELEASE.md  (+106 more)
.agile/: sprint-3-retrospective.md  sprint-4-tracking.md  sprint-5-plan.md
.bug/: 2025-02-14-ensemble-service.md  2025-02-14-online-learning.md  2025-02-14-regime-detection.md  2025-02-14-risk-services.md  2025-10-11-pr104-review.md  2025-10-12-issue-117-rca.md  2025-10-12-issue-118-rca.md  2025-10-12-issue-119-rca.md  2025-10-13-issue-106-rca.md  2025-10-13-issue-107-rca.md  2025-10-13-issue-109-rca.md  2025-10-13-issue-116-rca.md  2025-10-18-issue-112-retrospective.md  2025-10-19-issues-113-114-retrospective.md  20251018-pr-127-review.md  20251018-pr-128-review.md  20251019-pr-129-review.md  20251019-pr-130-review.md
.context/: stack_profile.md  system-prompt-commander
.docs/: requirements.md
.github/: dependabot.yml
.planning/: AlphaPulse_Presentation_Structure.md  dashboard_fix_plan.md  dashboard_implementation_summary.md
.qa/: issue-100-comment.md
.roo/: README.md  system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
.tasks/: TASK-CMD-20250422-223500.md  TASK-CMD-20250422-235250.md  TASK-DISC-001.md  TASK-FIXER-ALERTS-API-TESTS-20250422.md  TASK-WRITER-README-UPDATE-20250422.md
.templates/: rooconfig-template.md
.workflows/: development.yml
audit/: comprehensive-integration-summary.md  integration-status-diagram.md  sprint4-ml-integration-status.md
config/: ai_hedge_fund_config.yaml  alerting_config.yaml  api_config.yaml  backtest_sp500_config.yaml  data_pipeline_config.yaml  database_config.yaml  monitoring_config.yaml  portfolio_config.yaml  streaming_config.yaml  walk_forward_config.yaml
custom-modes-pool/: README.md
dashboard/: .env.example  .gitignore  README.md  build.sh  lint.sh  package-lock.json  package.json  setup.sh  start.sh  test.sh
docs/: .gitignore  AI_HEDGE_FUND_DOCUMENTATION.md  API_DOCUMENTATION.md  BACKEND_ARCHITECTURE.md  BYBIT_DEBUG_README.md  CELERY_SETUP.md  COMPREHENSIVE-ANALYSIS.md  DATABASE_CONNECTION_FIX.md  DELIVERY-PLAN-MULTI-TENANT-SAAS.md  EXCHANGE_SYNC_INTEGRATION.md  Gemfile  HLD-MULTI-TENANT-SAAS.md  LOGURU_DEPENDENCY_FIX.md  MULTI_AGENT_SYSTEM.md  ONLINE_LEARNING.md  PHASE-2-HANDOFF.md  README.md  RELEASE.md  SECURITY_FIXES_2025-10-19.md  SYSTEM_ARCHITECTURE.md  TA_LIB_INSTALLATION.md  TA_LIB_UNDEFINED_SYMBOL_FIX.md  _config.yml  architecture-diagrams.md  architecture-review.md  assumptions_validated.md  audit-logging.md  database-encryption.md  database-migration-checklist-sprint5.md  database-migration-plan.md  database-optimization.md  development-environment.md  distributed-computing.md  ensemble-methods.md  explainable-ai.md  frontend_backend_connection_fix.md  gpu_acceleration.md  index.md  key-management.md  load-testing-report-template.md  (+13 more)
examples/: README.md  api_examples.py  risk_analysis_demo.py  setup_bybit_credentials.py  setup_credentials.py  test_risk_report_correlation.py
head/: env.py
load-tests/: README.md  baseline-test.js  target-capacity-test.js
memory-bank/: LongShortStrategyConfigurationGuide.md  LongShortStrategyEnhancementPlan.md  LongShortStrategyImplementationPlan.md  LongShortStrategySummary.md  LongShortStrategyTestingPlan.md  RefactoringPlan.md  WalkForwardPlan.md  activeContext.md  alerting_api_integration.md  alerting_implementation_plan.md  alerting_system_design.md  architectural_patterns_evaluation.md  backend_testing_plan.md  binance_integration_guide.md  component_map.md  dashboard_backend_design.md  dashboard_backend_implementation_plan.md  dashboard_backend_status.md  dashboard_frontend_design.md  dashboard_frontend_implementation_plan.md  dashboard_frontend_project_structure.md  dashboard_implementation_plan.md  dashboard_integration_plan.md  dashboard_integration_testing.md  database_access_layer.md  database_configuration.md  database_deployment.md  database_implementation_plan.md  database_infrastructure.md  decisionLog.md  error_handling_patterns.md  exchange_sync_refactoring.md  feature_verification.md  feature_verification_summary.md  frontend_architecture.md  implementation_next_steps.md  implementation_plan.md  implementation_transition.md  metrics_api_test_spec.md  microservices_ai_agent_analysis.md  (+17 more)
migrations/: alembic.ini.bak  models.py
reports/: portfolio_analysis_20250201_203312.html  portfolio_analysis_20250201_233852.html  portfolio_analysis_20250208_235430.html
scripts/: benchmark_redis.py  benchmark_rls.py  benchmark_rls_production.py  check_api_endpoints.py  check_database.py  create-domain-tables.py  create_database.sh  enable_all_tests.py  generate_evidence.sh  init-vault-cluster.sh  initialize_database.py  load_test_vault.js  migrate_secrets.py  pm2-dev.sh  redis-cluster-health.sh  run_api.py  seed_load_test_users.py  setup.py  setup_database.sh  setup_test_database.sh  setup_vault_test_data.sh  (+8 more)
(+1169 files in other folders)
