[tool.poetry]
name = "crypto-trading-platform"
version = "0.1.0"
description = "Advanced Multi-Exchange Cryptocurrency Trading Platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ccxt = "^4.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.5"
ta-lib = "^0.4.24"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.2.0"
torch = "^2.0.0"
backtrader = "^1.9.76"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0" 