[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "alpha-pulse"
version = "0.1.5"
description = "AlphaPulse Trading System"
authors = ["AlphaPulse Team"]
readme = "README.md"
packages = [{include = "alpha_pulse", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ta-lib = "^0.6.3"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.11.3"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
psycopg2-binary = "^2.9.10"
ccxt = "^4.4.77"
httpx = "^0.28.1"
langchain-openai = "^0.3.14"
textblob = "^0.19.0"
stable-baselines3 = "^2.6.0"
optuna = "^4.3.0"
yfinance = "^0.2.56"
ta = "^0.11.0"
loguru = "^0.7.0"
psutil = "^5.9.8"  # Or latest compatible version
langchain = "^0.3.0" # Or latest compatible version
asyncpg = "^0.29.0" # Or latest compatible version
aiofiles = "^23.2.1" # Or latest compatible version
aiosmtplib = ">=3.3" # Broadened version constraint to resolve conflict
python-jose = "^3.3.0" # Added to fix build error
tensorboard = "^2.16.2"  # Added for RL trainer tests
tqdm = "^4.66.2"  # Added for stable-baselines3 progress bar
rich = "^14.0.0"  # Added for stable-baselines3 progress bar
python-multipart = "^0.0.9"
# Security dependencies
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
boto3 = "^1.34.0"  # AWS SDK for Secrets Manager
hvac = "^2.1.0"  # HashiCorp Vault client
cryptography = "^42.0.0"  # For local encryption
python-dotenv = "^1.0.0"  # For .env file loading

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.15.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests",
]
testpaths = ["src/alpha_pulse/tests"]
python_files = "test_*.py"
addopts = "-v --cov=src/alpha_pulse --cov-report=xml"