[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "alpha-pulse"
version = "1.20.0.0"
description = "AlphaPulse Trading System"
authors = ["AlphaPulse Team"]
readme = "README.md"
license = "AGPL-3.0-or-later"
packages = [{include = "alpha_pulse", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ta-lib = "^0.6.3"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
pydantic = "^2.11.3"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.41"
alembic = "^1.15.2"
psycopg2-binary = "^2.9.10"
ccxt = "^4.4.77"
httpx = "^0.27.0"
langchain-openai = "^0.2.0"
textblob = "^0.18.0"
stable-baselines3 = "^2.3.0"
optuna = "^3.6.0"
yfinance = "^0.2.40"
ta = "^0.11.0"
loguru = "^0.7.0"
psutil = "^5.9.8"  # Or latest compatible version
langchain = "^0.3.0" # Or latest compatible version
asyncpg = "^0.29.0" # Or latest compatible version
aiofiles = "^23.2.1" # Or latest compatible version
aiosmtplib = ">=3.0.1" # Broadened version constraint to resolve conflict
python-jose = "^3.3.0" # Added to fix build error
tensorboard = "^2.17.0"  # Added for RL trainer tests
tqdm = "^4.66.2"  # Added for stable-baselines3 progress bar
rich = "^13.7.0"  # Added for stable-baselines3 progress bar
python-multipart = "^0.0.9"
# Security dependencies
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
boto3 = "^1.35.100"  # AWS SDK for Secrets Manager
hvac = "^2.1.0"  # HashiCorp Vault client
cryptography = "^44.0.1"  # For local encryption
python-dotenv = "^1.0.0"  # For .env file loading
# Input validation dependencies
email-validator = "^2.1.0"  # Email validation
phonenumbers = "^8.13.0"  # Phone number validation
jsonschema = "^4.23.0"  # JSON schema validation
redis = "^3.5.3"  # Redis client for validation caching - compatible with redis-py-cluster
# Real-time data provider dependencies
aiohttp = "^3.11.20"  # Async HTTP client for data providers
websockets = "^14.1"  # WebSocket support for real-time feeds
# Distributed computing dependencies
ray = {version = "^2.10.0", extras = ["default"]}  # Ray distributed computing
dask = {version = "^2024.1.0", extras = ["complete"]}  # Dask distributed computing
distributed = "^2024.1.0"  # Dask distributed scheduler
# Caching dependencies
msgpack = "^1.0.5"  # MessagePack serialization
lz4 = "^4.3.2"  # LZ4 compression
python-snappy = "^0.6.1"  # Snappy compression
redis-py-cluster = "^2.1.3"  # Redis cluster support
prometheus-client = "^0.22.0"  # Prometheus metrics

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"
pytest-timeout = "^2.3.1"
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.15.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests",
]
testpaths = ["src/alpha_pulse/tests"]
python_files = "test_*.py"
addopts = "-v --cov=src/alpha_pulse --cov-report=xml"